--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -2,9 +2,16 @@
 $primary: #4285F4;
 $accent: #0F9D58;
 $warn: #DB4437;
+$alert: #F4B400;
 $textPrimary: #737373;
 $icon: #476282;
+
+$white: #FFFFFF;
 
 $grey-lighter:#F2F2F2;
 $grey-medium:#E6E6E6;
 $grey-darker:#CCCCCC;
+
+$g-text-on-black:#b2b2b2;
+$g-black-lighter:#353535;
+$g-black-darker:#303030;
