--- a/src/app/message-dialog/message-dialog.component.html
+++ b/src/app/message-dialog/message-dialog.component.html
@@ -1,24 +1,39 @@
 <div id="parent" fxLayout="column" fxLayoutAlign="center center">
     
-    <ng-container *ngIf="data.success">
+    <ng-container *ngIf="data.type === 'success'">
 
         <mat-icon class="success result-icon">check_circle_outline</mat-icon>
         <mat-label class="header-label result" fxFlexOffset="15px">Success</mat-label>
 
     </ng-container>
-    <ng-container *ngIf="!data.success">
+    <ng-container *ngIf="data.type === 'fail'">
 
         <mat-icon class="failure result-icon">error_outline</mat-icon>
         <mat-label class="header-label result" fxFlexOffset="15px">Failure</mat-label>
         
     </ng-container>
-    <mat-label id="headerLabel" fxFlexOffset="40px">{{data.message}}</mat-label>
-    <!-- <div fxLayout="row" fxLayoutAlign="center center" mat-dialog-content>
-        <mat-label id="headerLabel">{{data.message}}</mat-label>
-    </div> -->
 
-    <div mat-dialog-actions fxLayoutAlign="center center" fxFlexOffset="15px">
-        <button class="lighter-button" mat-flat-button (click)="close()">{{data.okText||'Got It'}}</button>
-    </div>
+    <ng-container *ngIf="data.type === 'alert'">
+
+        <mat-icon class="alert-icon result-icon">warning</mat-icon>
+        <mat-label class="header-label result" fxFlexOffset="15px">Alert</mat-label>
+        
+    </ng-container>
+
+    <mat-label id="headerLabel" fxFlexOffset="40px">{{data.message}}</mat-label>
+
+
+    <ng-container *ngIf="data.type === 'alert'">
+        <div mat-dialog-actions>
+            <button class="lighter-button" mat-flat-button (click)="cancel()">Cancel</button>
+            <button class="lighter-button" mat-flat-button (click)="approve()">{{data.okText||'Got It'}}</button>
+        </div>
+    </ng-container>
+    <ng-container *ngIf="data.type !== 'alert'">
+        <div mat-dialog-actions fxLayoutAlign="center center" fxFlexOffset="15px">
+            <button class="lighter-button" mat-flat-button (click)="close()">{{data.okText||'Got It'}}</button>
+        </div>
+    </ng-container>
+    
 
 </div>
