--- a/src/app/feature-modules/doctor/live-queue-details/live-queue-details.component.scss
+++ b/src/app/feature-modules/doctor/live-queue-details/live-queue-details.component.scss
@@ -73,10 +73,10 @@
       height:60px;
       background-color: $grey-lighter;
   }
-  .temp{
-      overflow-x: hidden;
-      overflow-y: auto;;
-  }
+  .booking-list-wrapper{
+    overflow-x: hidden;
+    overflow-y: auto;;
+}
   .processing-card{
     height: fit-content;
     width: auto;
@@ -110,37 +110,7 @@
     height: fit-content;
     align-self: center;
   }
-
- 
-
-  .timer-box {
-    width: fit-content;
-    height: fit-content;
-    padding: 10px 20px 10px 20px;
-    border: solid 1px #ccc;
-    color: rgba(0, 0, 0, 0.87);
-    cursor: move;
-    background: #fff;
-    border-radius: 4px;
-    position: relative;
-    z-index: 1;
-    transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
-    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
-                0 2px 2px 0 rgba(0, 0, 0, 0.14),
-                0 1px 5px 0 rgba(0, 0, 0, 0.12);
-  }
   
-  .timer-box:active {
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-                0 8px 10px 1px rgba(0, 0, 0, 0.14),
-                0 3px 14px 2px rgba(0, 0, 0, 0.12);
-  }
-  .small-label{
-    font-size: smaller;
-  }
-  .big-label{
-    font-size: x-large;
-  }
   .next-button{
     color: $primary;
     width: fit-content;
@@ -150,8 +120,9 @@
     width: fit-content;
   }
   .timing-container{
-    height: 100%;
+    
     width: fit-content;
+
   }
   .status-label{
     color: $accent;
@@ -162,8 +133,11 @@
   .small-icon{
     font-size: 20px;
   }
-  
+  .map-type-control{
+    height: 10px;
+  }
 
+  
 //drag and drop stop
 
 
