--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -71,7 +71,7 @@ mat-icon{
 .parent{
   height: 100%;
   background-color: #ffffff;
-  padding: 15px;
+  padding: 15px 15px 0px 15px;
 }
 .logo-form-top{
   max-width: 201.5px;
@@ -121,6 +121,35 @@ div::-webkit-scrollbar-thumb {
 }
 .warning-icon{
   color: $warn;
+}
+.small-label{
+  font-size: smaller;
+}
+.big-label{
+  font-size: x-large;
+}
+
+.timer-box {
+  width: fit-content;
+  height: fit-content;
+  padding: 10px 20px 10px 20px;
+  border: solid 1px #ccc;
+  color: rgba(0, 0, 0, 0.87);
+  cursor: move;
+  background: #fff;
+  border-radius: 4px;
+  position: relative;
+  z-index: 1;
+  transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+              0 2px 2px 0 rgba(0, 0, 0, 0.14),
+              0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
+
+.timer-box:active {
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+              0 8px 10px 1px rgba(0, 0, 0, 0.14),
+              0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 // .link-label:hover {
 //   text-decoration: underline;
